tests/syntax-error/DuplicateTypeSignature2.vix
test : int
test = 123
test : int
